--- a/global.css
+++ b/global.css
@@ -1,11 +1,15 @@
 * {
-    margin     : 0;
-    padding    : 0;
+    margin: 0;
+    padding: 0;
     font-family: sans-serif;
-    font-size  : 62.5%;
+    font-size: 62.5%;
 }
 
 body {
-    background : #ebeef5;
+    position: relative;
+    height: 906px;
+    width: 1440px;
+    background: #ebeef5;
     font-family: 'Montserrat', sans-serif;
+    border: 1px solid black;
 }
