--- a/global.css
+++ b/global.css
@@ -1,15 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
     font-size: 62.5%;
 }
 
 body {
-    position: relative;
-    height: 906px;
-    width: 1440px;
+    /* height: 906px;
+    width: 1440px; */
     background: #ebeef5;
     font-family: 'Montserrat', sans-serif;
-    border: 1px solid black;
 }
