--- a/Styles/layout.css
+++ b/Styles/layout.css
@@ -74,7 +74,7 @@ hr {
 
 footer {
     position: relative;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     text-align: center;
     color: #02577A;
